Fix Overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,8 @@
 body {
     font-family: "Prompt", sans-serif;
     background-color: #0F1624;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: hidden;
    
 }
 
